--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
 <div class="container">
+  <!-- Componente de Majo -->
   <app-header></app-header>
+
+  <!-- Componente de Samantha -->
+  <app-login></app-login>
+
+  <!-- Componente de Samantha -->
+  <app-signup></app-signup>
+
+  <!-- Componente de Majo -->
   <app-footer></app-footer>
 </div>
