--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -14,8 +14,8 @@
                                     <span class="fa fa-user p-2"></span>
                                     <label for="Tipo  De Documento">Tipo De Documento:</label>
                                     <select id="Tipo De Documento" name="deporte">
-                                        <option value="">Cedula</option>
-                                        <option value="">Tarjeta De Indentidad</option>
+                                        <option value="">Cédula</option>
+                                        <option value="">Tarjeta De Identidad</option>
                                         <option value="">Pasaporte</option>
                                         <option value="">Certificados excepcionales y de nacionalidad</option>
                                     </select>
@@ -24,22 +24,16 @@
                             <div class="form-group pt-3  ">
                                 <div class="input-field ">
                                     <span class="fa fa-lock p-2"></span>
-                                    <input type="type" class="arreglo" placeholder="Numero De Documento">
+                                    <input type="type" class="arreglo" placeholder="Número De Documento">
                                 </div> 
                             </div>
                             <div class="form-inline fr mt-4">
                             </div>
                             <button type="submit" class="btn btn-primary btn-block mt-4 w-100">Enviar</button>
-                            <div class="text-center pt-4 text-muted">Already have account<a id="forget" routerLink="/login">Login</a></div>
+                            
                         </form>
                     </div>
-                    <div class="mx-3 my-2 py-2 bordert">
-                        <div class="text-center py-3">
-                            <a href="https:/wwww.facebook.com"target="_blank" class="px-2"> <img src="https:/www.dpreview.com/files/p/articles/4698742202/facebook.jpeg" alt=""></a>
-                            <a href="https:/www.google.com" target="_blank" class="px-2"><img src="https:/www.freepnglogos.com/uploads/google-logo-png/google-logo-png-suite-everything-you-need-know-about-google-newest-0.png" alt=""></a>
-                            <a href="https:/www.github.com" target="_blank" class="px-2"><img src="https:/www.freepnglogos.com/uploads/512x512-logo-png/512x512-logo-github-icon-35.png" alt=""></a>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
