COMENTO APP-SIGING Y ARREGLOS

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,8 +5,8 @@
   <!-- Componente de Samantha -->
   <app-login></app-login>
 
-  <!-- Componente de Samantha -->
-  <app-signup></app-signup>
+  <!-- Componente de Samantha
+  <app-signup></app-signup> -->
 
   <!-- Componente de Majo -->
   <app-footer></app-footer>
