--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="footer mt-auto py-3 bg-light">
-    <div class="container-footer">
-      <span class="text-muted"><h4> &copy; {{year}} <b>ASISTE</b>-All rights reserved.</h4></span>
-    </div>
+<div class="container-fluid">
+  <footer class="footer fixed-bottom text-white">
+    <h5 class="d-flex mt-2 mb-0 justify-content-center"> {{getNombreApp()}} .::. {{getYear()}} &copy; -All rights reserved.</h5>
   </footer>
+</div>
