--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -24,7 +24,7 @@
                             <button type="submit" class="btn btn-primary btn-block mt-4 w-100">Inicio</button>
 
                             <div class="form-inline fr mt-4">
-                                <a href="forget" class="font-weight-bold">¿Olvidó su contraseña?</a>
+                                <a href="/src/app/components/signup/signup.component.html" class="font-weight-bold">¿Olvidó su contraseña?</a>
                             </div>
                         </form>
                     </div>
