--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,17 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
-.container-footer{
-    background-color: #85d35e;
-    padding: 15px 10px;
-    text-align: center;
-    color: #fff;
+.container-fluid{
+  background-color: #85d35e;
+  text-align: center;
+  color: #fff;
 }
-.container-footer small{
-    font-size: 15px;
+.container-fluid small{
+  font-size: 15px;
+}
+
+.footer{
+background-color: #85d35e;
+text-align: center;
 }
 
 html,body {
