--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md fixed-top">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
         <a href="#" class="navbar-brand">ASISTE</a>
         <button aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"
