--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,6 +1,11 @@
 
 .container{
-    margin-right: 550px;
+    margin-left: auto; 
+    margin-right: auto; 
+    margin-top: auto; 
+    margin-bottom: auto; 
+    width: 50%; 
+    height: 50vh;
 }
 .panel-heading{
     text-align: center;
